# CloudPerf

./: InstallKernel.md  Readme.md  install_all_workloads.md  install_memtier.sh  install_redis.sh  mercury_interaction.md  run_redis.sh
DLRM+redis/: Readme.md  run_inference_infinitely.sh  run_memtier_dlrm.sh  start_memtier_dlrm.sh
NUMA_Hint_Faults/: Readme.md  checkFaults.py
dlrm_commands/: process_contention_dlrm.py  process_dlrm_single_data.py  process_dlrm_single_data_20G.py  process_interference_dlrm.py  process_interference_llama.py  process_single_all.py  run_contention_all.sh  run_interference_all.sh  run_single_all.sh  track_pid.sh
gapbs_commands/: bc-urand.sh  bc-web.sh  bfs-urand.sh  bfs-web.sh  cc-urand.sh  cc-web.sh  check_simulation.py  core-bc-urand.sh  pr-urand.sh  pr-web.sh  process_contention_graph.py  process_contention_vector.py  process_graph_single_data.py  process_graph_single_data_20G.py  process_interference_graph.py  process_interference_llama.py  process_interference_vector.py  run_contention_all.sh  run_interference_all.sh  run_single_all.sh
general_commands/: check_mercury_functionality.py  compile.sh  log_memory_usage.cpp  process_contention.py  process_contention_mer.py  process_interference.py  run_bw_interference_all_workloads.sh  track_numa_stat.sh  track_pid.sh  track_pid_mercury.sh  update_mem_limit.cpp
kv_store_commands/: process_contention_kv.py  process_contention_vector.py  process_interference_kv.py  run_contention_all.sh  (+5 more)
profiler/: CMakeLists.txt  MakeFile  monitor.cpp  monitor.h  monitoring.py  profiler.cpp  profiler.h
(+226 files in other folders)
